@@ -1,5 +1,6 @@
 === qitensor-0.11dev (Dan Stahlke, ongoing) ===
 	* no changes yet
+	* sympy support
 
 === qitensor-0.10 (Dan Stahlke, 2012-10-27) ===
 	* can run doctests via 'setup.py test'
